--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\DemoWebSite\packages.config" />
+  <repository path="..\xrc.UnitTest\packages.config" />
   <repository path="..\xrc.Windsor\packages.config" />
   <repository path="..\xrc\packages.config" />
 </repositories>
