--- a/DemoWebSite/packages.config
+++ b/DemoWebSite/packages.config
@@ -3,6 +3,7 @@
   <package id="Castle.Core" version="3.0.0.4001" />
   <package id="Castle.Windsor" version="3.0.0.4001" />
   <package id="jQuery" version="1.7.2" />
+  <package id="knockoutjs" version="2.1.0" />
   <package id="System.Json" version="4.0.20126.16343" />
   <package id="Twitter.Bootstrap" version="2.0.4.1" />
 </packages>
