--- a/xrc.UnitTest/xrc.UnitTest.csproj
+++ b/xrc.UnitTest/xrc.UnitTest.csproj
@@ -64,6 +64,8 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mocks\ContextMock.cs" />
+    <Compile Include="Mocks\MashupScriptServiceMock.cs" />
     <Compile Include="Modules\ModuleCatalogService_Test.cs" />
     <Compile Include="Renderers\RendererCatalogService_Test.cs" />
     <Compile Include="Configuration\SiteConfigurationProviderService_Test.cs" />
@@ -78,6 +80,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderers\Xslt\XsltRenderer_Test.cs" />
     <Compile Include="Mocks\ScriptServiceMock.cs" />
+    <Compile Include="SiteManager\MashupScriptService_Test.cs" />
     <Compile Include="TestHelper.cs" />
     <Compile Include="SiteManager\MashupParserService_Test.cs" />
   </ItemGroup>
@@ -129,6 +132,7 @@
     <None Include="App.config" />
     <None Include="SiteManager\example5.xrc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
     <None Include="SiteManager\example4.xrc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
