--- a/DemoWebSite/Web.config
+++ b/DemoWebSite/Web.config
@@ -39,6 +39,7 @@
       <add name="WeatherModule" type="DemoWebSite.WeatherModule, DemoWebSite" />
       <add name="GoogleNewsModule" type="DemoWebSite.GoogleNewsModule, DemoWebSite" />
       <add name="PlayerModule" type="DemoWebSite.PlayerModule, DemoWebSite" />
+      <add name="ContactModule" type="DemoWebSite.ContactModule, DemoWebSite" />
     </modules>
   </xrc>
 
