--- a/DemoWebSite/Web.config
+++ b/DemoWebSite/Web.config
@@ -36,10 +36,10 @@
     </renderers>
     <modules>
       <add name="default" assembly="xrc" />
-      <add name="WeatherModule" type="DemoWebSite.WeatherModule, DemoWebSite" />
-      <add name="GoogleNewsModule" type="DemoWebSite.GoogleNewsModule, DemoWebSite" />
-      <add name="PlayerModule" type="DemoWebSite.PlayerModule, DemoWebSite" />
-      <add name="ContactModule" type="DemoWebSite.ContactModule, DemoWebSite" />
+      <add name="WeatherModule" type="DemoWebSite.WeatherModule, DemoWebSite.Lib" />
+      <add name="GoogleNewsModule" type="DemoWebSite.GoogleNewsModule, DemoWebSite.Lib" />
+      <add name="PlayerModule" type="DemoWebSite.PlayerModule, DemoWebSite.Lib" />
+      <add name="ContactModule" type="DemoWebSite.ContactModule, DemoWebSite.Lib" />
     </modules>
   </xrc>
 
