--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\DemoWebSite.Lib\packages.config" />
   <repository path="..\DemoWebSite\packages.config" />
   <repository path="..\xrc.UnitTest\packages.config" />
   <repository path="..\xrc.Windsor\packages.config" />
