--- a/xrc/xrc.csproj
+++ b/xrc/xrc.csproj
@@ -58,14 +58,20 @@
     <Compile Include="Configuration\ComponentElement.cs" />
     <Compile Include="Configuration\WorkingPath.cs" />
     <Compile Include="Context\Context.cs" />
+    <Compile Include="Context\XrcRequestContext.cs" />
     <Compile Include="Context\IContext.cs" />
     <Compile Include="Context\ContextParameterList.cs" />
     <Compile Include="Context\ContextParameter.cs" />
+    <Compile Include="Context\XrcHttpContext.cs" />
     <Compile Include="ConvertEx.cs" />
     <Compile Include="Components\ComponentDefinition.cs" />
     <Compile Include="Exceptions\MovedPermanentlyException.cs" />
     <Compile Include="Exceptions\ResourceNotFoundException.cs" />
     <Compile Include="Exceptions\XrcException.cs" />
+    <Compile Include="Modules\IFileModule.cs" />
+    <Compile Include="Modules\IHtmlModule.cs" />
+    <Compile Include="Modules\ISlotModule.cs" />
+    <Compile Include="Modules\IUrlModule.cs" />
     <Compile Include="Modules\ModuleCatalogService.cs" />
     <Compile Include="Modules\IModuleCatalogService.cs" />
     <Compile Include="Modules\ModuleDefinitionList.cs" />
