Include parameters + xsd schema + refactoring

--- a/xrc.UnitTest/App.config
+++ b/xrc.UnitTest/App.config
@@ -28,6 +28,7 @@
     </parameters>
     <modules>
       <add name="default" assembly="xrc" />
+      <add name="TestModule" type="xrc.Modules.TestModule, xrc.UnitTest" />
     </modules>
     <renderers>
       <add name="default" assembly="xrc" />
