--- a/xrc/xrc.csproj
+++ b/xrc/xrc.csproj
@@ -144,9 +144,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="xrc_schema.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Script\TODO.txt" />
+    <None Include="xrc_schema_catalog.xml" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
