--- a/DemoWebSite/Web.config
+++ b/DemoWebSite/Web.config
@@ -26,6 +26,16 @@
           <add key="debug" value="true" />
         </parameters>
       </add>
+      <add key="azure" uri="http://xrcdemo.azurewebsites.net/">
+        <parameters>
+          <add key="debug" value="false" />
+        </parameters>
+      </add>
+      <add key="localiis" uri="http://localhost/xrcdemo">
+        <parameters>
+          <add key="debug" value="false" />
+        </parameters>
+      </add>
     </sites>
     <parameters>
       <add key="culture" value="en" />
@@ -84,6 +94,8 @@
 			<!--<add verb="*" path="*"
 					 type="xrc.HttpHandler, xrc" />-->
 		</httpHandlers>
+    
+    <customErrors mode="Off"/>
   </system.web>
 
   <system.webServer>
