--- a/xrc/xrc.csproj
+++ b/xrc/xrc.csproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Script\TODO.txt" />
+    <None Include="xrc_content.pkgdef" />
     <None Include="xrc_schema_catalog.xml" />
   </ItemGroup>
   <ItemGroup />
