replaced weather with twitter + renderer to view

--- a/DemoWebSite.Lib/DemoWebSite.Lib.csproj
+++ b/DemoWebSite.Lib/DemoWebSite.Lib.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="PlayerModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WeatherModule.cs" />
+    <Compile Include="TwitterModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\xrc\xrc.csproj">
