--- a/DemoWebSite/Web.config
+++ b/DemoWebSite/Web.config
@@ -5,8 +5,8 @@
   -->
 
 <configuration>
-  <configSections>
-    <section name="xrc" type="xrc.Configuration.XrcSection, xrc" />
+	<configSections>
+		<section name="xrc" type="xrc.Configuration.XrcSection, xrc" />
 
 		<sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
 			<section name="host" type="System.Web.WebPages.Razor.Configuration.HostSection, System.Web.WebPages.Razor, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
@@ -14,44 +14,44 @@
 		</sectionGroup>
 	</configSections>
 
-  <appSettings>
-    <add key="webpages:Version" value="1.0.0.0"/>
-  </appSettings>
+	<appSettings>
+		<add key="webpages:Version" value="1.0.0.0"/>
+	</appSettings>
 
 
 	<xrc>
-    <sites>
-      <add key="local" uri="http://localhost:8082/DemoWebSite">
-        <parameters>
-          <add key="debug" value="true" />
-        </parameters>
-      </add>
-      <add key="azure" uri="http://xrcdemo.azurewebsites.net/">
-        <parameters>
-          <add key="debug" value="false" />
-        </parameters>
-      </add>
-      <add key="localiis" uri="http://localhost/xrcdemo">
-        <parameters>
-          <add key="debug" value="false" />
-        </parameters>
-      </add>
-    </sites>
-    <parameters>
-      <add key="culture" value="en" />
-      <add key="debug" value="false" />
-    </parameters>
-    <renderers>
-      <add name="default" assembly="xrc" />
-    </renderers>
-    <modules>
-      <add name="default" assembly="xrc" />
-      <add name="WeatherModule" type="DemoWebSite.WeatherModule, DemoWebSite.Lib" />
-      <add name="GoogleNewsModule" type="DemoWebSite.GoogleNewsModule, DemoWebSite.Lib" />
-      <add name="PlayerModule" type="DemoWebSite.PlayerModule, DemoWebSite.Lib" />
-      <add name="ContactModule" type="DemoWebSite.ContactModule, DemoWebSite.Lib" />
-    </modules>
-  </xrc>
+		<sites>
+			<add key="local" uri="http://localhost:8082/DemoWebSite">
+				<parameters>
+					<add key="debug" value="true" />
+				</parameters>
+			</add>
+			<add key="azure" uri="http://xrcdemo.azurewebsites.net/">
+				<parameters>
+					<add key="debug" value="false" />
+				</parameters>
+			</add>
+			<add key="localiis" uri="http://localhost/xrcdemo">
+				<parameters>
+					<add key="debug" value="false" />
+				</parameters>
+			</add>
+		</sites>
+		<parameters>
+			<add key="culture" value="en" />
+			<add key="debug" value="false" />
+		</parameters>
+		<views>
+			<add name="default" assembly="xrc" />
+		</views>
+		<modules>
+			<add name="default" assembly="xrc" />
+			<add name="TwitterModule" type="DemoWebSite.TwitterModule, DemoWebSite.Lib" />
+			<add name="GoogleNewsModule" type="DemoWebSite.GoogleNewsModule, DemoWebSite.Lib" />
+			<add name="PlayerModule" type="DemoWebSite.PlayerModule, DemoWebSite.Lib" />
+			<add name="ContactModule" type="DemoWebSite.ContactModule, DemoWebSite.Lib" />
+		</modules>
+	</xrc>
 
 	<system.web.webPages.razor>
 		<host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -65,55 +65,55 @@
 			</namespaces>
 		</pages>
 	</system.web.webPages.razor>
-  
-  <system.web>
-    <compilation debug="true" targetFramework="4.0">
-      <assemblies>
-        <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-      </assemblies>
-    </compilation>
 
-    <authentication mode="None">
-    </authentication>
+	<system.web>
+		<compilation debug="true" targetFramework="4.0">
+			<assemblies>
+				<add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+				<add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+				<add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+				<add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+				<add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+			</assemblies>
+		</compilation>
 
-    <pages>
-      <namespaces>
-        <add namespace="System.Web.Helpers" />
-        <add namespace="System.Web.Mvc" />
-        <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages"/>
-      </namespaces>
-    </pages>
+		<authentication mode="None">
+		</authentication>
+
+		<pages>
+			<namespaces>
+				<add namespace="System.Web.Helpers" />
+				<add namespace="System.Web.Mvc" />
+				<add namespace="System.Web.Mvc.Ajax" />
+				<add namespace="System.Web.Mvc.Html" />
+				<add namespace="System.Web.Routing" />
+				<add namespace="System.Web.WebPages"/>
+			</namespaces>
+		</pages>
 		<httpHandlers>
 			<!--<add verb="*" path="*"
 					 type="xrc.HttpHandler, xrc" />-->
 		</httpHandlers>
-    
-    <customErrors mode="Off"/>
-  </system.web>
 
-  <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
-    <modules runAllManagedModulesForAllRequests="true"/>
+		<customErrors mode="RemoteOnly"/>
+	</system.web>
+
+	<system.webServer>
+		<validation validateIntegratedModeConfiguration="false"/>
+		<modules runAllManagedModulesForAllRequests="true"/>
 		<handlers>
 			<!--<add name="XrcHttpHandler" verb="*" path="*"
 					 type="xrc.HttpHandler, xrc" />-->
 		</handlers>
-  </system.webServer>
+	</system.webServer>
 
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+				<bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
 
 </configuration>
