--- a/xrc.UnitTest/App.config
+++ b/xrc.UnitTest/App.config
@@ -30,9 +30,9 @@
       <add name="default" assembly="xrc" />
       <add name="TestModule" type="xrc.Modules.TestModule, xrc.UnitTest" />
     </modules>
-    <renderers>
+    <views>
       <add name="default" assembly="xrc" />
-    </renderers>
+    </views>
   </xrc>
 
 </configuration>
