Added source code button + CallerContext

--- a/DemoWebSite.Lib/DemoWebSite.Lib.csproj
+++ b/DemoWebSite.Lib/DemoWebSite.Lib.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Contact.cs" />
     <Compile Include="ContactModule.cs" />
+    <Compile Include="SourceCodeModule.cs" />
     <Compile Include="GoogleNewsModule.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerModule.cs" />
