--- a/DemoWebSite/Web.config
+++ b/DemoWebSite/Web.config
@@ -50,6 +50,7 @@
 			<add name="GoogleNewsModule" type="DemoWebSite.GoogleNewsModule, DemoWebSite.Lib" />
 			<add name="PlayerModule" type="DemoWebSite.PlayerModule, DemoWebSite.Lib" />
 			<add name="ContactModule" type="DemoWebSite.ContactModule, DemoWebSite.Lib" />
+			<add name="SourceCodeModule" type="DemoWebSite.SourceCodeModule, DemoWebSite.Lib" />
 		</modules>
 	</xrc>
 
