--- a/xrc.Windsor/xrc.Windsor.csproj
+++ b/xrc.Windsor/xrc.Windsor.csproj
@@ -40,6 +40,7 @@
       <HintPath>..\packages\Castle.Windsor.3.0.0.4001\lib\net40\Castle.Windsor.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
