Added some note and comment

--- a/DemoWebSite/root/Web.config
+++ b/DemoWebSite/root/Web.config
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-	
 	<!-- Block direct browsing of the xrc root folder -->
-	
 	<system.web>
 		<httpHandlers>
+			<clear />
 			<add path="*" verb="*" type="System.Web.HttpNotFoundHandler"/>
 		</httpHandlers>
 	</system.web>
 	<system.webServer>
 		<handlers>
+			<clear />
 			<add name="BlockPath" path="*" verb="*" type="System.Web.HttpNotFoundHandler" />
 		</handlers>
 	</system.webServer>
